--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
               or just want to say hello, feel free to reach out.
             </p>
           </div>
-          <form action="#" method="post">
+          <form id="contactForm">
             <label for="name">Full Name:</label>
             <input
               type="text"
