updated profile card to include contact and page

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             ></small>
 
             <button
-              type="submit"
+              type="button"
               aria-label="Send Message"
               data-testid="test-contact-submit"
             >
