updated profile card to include contact and page

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
               or just want to say hello, feel free to reach out.
             </p>
           </div>
-          <form id="contactForm">
+          <form id="contactForm" action="" novalidate>
             <label for="name">Full Name:</label>
             <input
               type="text"
@@ -96,7 +96,7 @@
             ></small>
 
             <button
-              type="button"
+              type="submit"
               aria-label="Send Message"
               data-testid="test-contact-submit"
             >
