--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="./app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
