updated profile card to include contact and page

--- a/index.html
+++ b/index.html
@@ -128,5 +128,5 @@
       </article>
     </div>
   </body>
-  <script src="./js/app.js"></script>
+  <script src="app.js" type="text/javascript"></script>
 </html>
