--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,9 @@
         </div>
       </div>
     </div>
-    <script src="app.js" type="text/javascript"></script>
+    <script
+      src="https://twizz4u.github.io/Profile-Card/app.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
