--- a/index.html
+++ b/index.html
@@ -128,5 +128,8 @@
       </article>
     </div>
   </body>
-  <script src="app.js" type="text/javascript"></script>
+  <script
+    src="https://twizz4u.github.io/Profile-Card/app.js"
+    type="text/javascript"
+  ></script>
 </html>
