updated profile card to include contact and page

--- a/contact.html
+++ b/contact.html
@@ -106,9 +106,6 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://twizz4u.github.io/Profile-Card/app.js"
-      type="text/javascript"
-    ></script>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
