--- a/index.html
+++ b/index.html
@@ -128,8 +128,5 @@
       </article>
     </div>
   </body>
-  <script
-    src="https://twizz4u.github.io/Profile-Card/app.js"
-    type="text/javascript"
-  ></script>
+  <script src="app.js" type="text/javascript"></script>
 </html>
